feat: add schema registry support

--- a/monitor/src/main/resources/application.conf
+++ b/monitor/src/main/resources/application.conf
@@ -4,6 +4,10 @@ event-monitor {
     bootstrap-servers = ${?KAFKA_BOOTSTRAP_SERVERS}
   }
 
+  schema-registry {
+    url = "http://localhost:8081"
+  }
+
   topics = [
     {
       name = "topic1"
