feat: storage and search capabilities

--- a/monitor/pom.xml
+++ b/monitor/pom.xml
@@ -37,6 +37,14 @@
             <groupId>io.confluent</groupId>
             <artifactId>kafka-streams-avro-serde</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.linecorp.armeria</groupId>
+            <artifactId>armeria</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
         <!-- utility libraries -->
         <dependency>
             <groupId>com.typesafe</groupId>
