--- a/monitor/src/main/resources/application.conf
+++ b/monitor/src/main/resources/application.conf
@@ -2,6 +2,11 @@ event-monitor {
   kafka {
     bootstrap-servers = "localhost:29092"
     bootstrap-servers = ${?KAFKA_BOOTSTRAP_SERVERS}
+
+    streams {
+      application-id = "event-monitor"
+      state-dir = "target/kafka-streams"
+    }
   }
 
   schema-registry {
@@ -13,9 +18,12 @@ event-monitor {
       name = "topic1"
       status = "first"
       id = {
-        source = KEY
-        key = string
+        key = "id"
       }
     }
   ]
+
+  http = {
+    port = 8080
+  }
 }
