--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <avro.version>1.8.2</avro.version>
         <kafka.version>2.1.1</kafka.version>
         <confluent.version>5.1.1</confluent.version>
+        <armeria.version>0.84.0</armeria.version>
+        <gson.version>2.8.5</gson.version>
         <config.version>1.3.3</config.version>
         <slf4j.version>1.7.26</slf4j.version>
         <junit.version>4.12</junit.version>
@@ -61,6 +63,16 @@
                 <groupId>io.confluent</groupId>
                 <artifactId>kafka-streams-avro-serde</artifactId>
                 <version>${confluent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.linecorp.armeria</groupId>
+                <artifactId>armeria</artifactId>
+                <version>${armeria.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
             </dependency>
             <!-- utility libraries -->
             <dependency>
