fix: mutate history

--- a/monitor/src/main/resources/application.conf
+++ b/monitor/src/main/resources/application.conf
@@ -21,6 +21,13 @@ event-monitor {
         key = "id"
       }
     }
+    {
+      name = "topic2"
+      status = "second"
+      id = {
+        key = "id"
+      }
+    }
   ]
 
   http = {
